@@ -1,111 +1,84 @@
-Operator initialized with
+# Dremio REST Server Operator
 
-```
-operator-sdk init --domain dremiorestserver.com --repo github.com/scc-digitalhub/dremio-rest-server-operator --plugins=go/v4-alpha
-```
+A Kubernetes operator to start instances of [Dremio REST server](https://github.com/scc-digitalhub/dremio-rest-server).
 
-```
-operator-sdk create api --group operator --version v1 --kind DremioRestServer --resource --controller
-```
-
-The environment variables required are:
-
-- `WATCH_NAMESPACE` (an empty value means the operator is running with cluster scope): comma-separated namespaces
-- `DRS_IMAGE`: Dremio REST Server image (defaults to `ghcr.io/scc-digitalhub/dremio-rest-server`)
-- `DRS_IMAGE_TAG`: Dremio REST Server image tag (defaults to `latest`)
-- `DRS_SERVICE_TYPE`: can be either `ClusterIP` or `NodePort` (default)
-
-# dremio-rest-server-operator
-// TODO(user): Add simple overview of use/purpose
-
-## Description
-// TODO(user): An in-depth paragraph about your project and overview of use
-
-## Getting Started
-You’ll need a Kubernetes cluster to run against. You can use [KIND](https://sigs.k8s.io/kind) to get a local cluster for testing, or run against a remote cluster.
-**Note:** Your controller will automatically use the current context in your kubeconfig file (i.e. whatever cluster `kubectl cluster-info` shows).
-
-### Running on the cluster
-1. Install Instances of Custom Resources:
-
+## Installation
+There is an available deployment file ready to be used. Install operator and CRD:
 ```sh
-kubectl apply -f config/samples/
+kubectl apply -f deployment.yaml
 ```
 
-2. Build and push your image to the location specified by `IMG`:
+An example CR is found at `config/samples/operator_v1_dremiorestserver.yaml`. The CRD included in the deployment file is found at `config/crd/bases/operator.dremiorestserver.com_dremiorestservers.yaml`.
 
+Launch CR:
 ```sh
-make docker-build docker-push IMG=<some-registry>/dremio-rest-server-operator:tag
+kubectl apply -f config/samples/operator_v1_dremiorestserver.yaml
 ```
 
-3. Deploy the controller to the cluster with the image specified by `IMG`:
+## Dremio REST Server custom resource
+The custom resource's properties are:
 
-```sh
-make deploy IMG=<some-registry>/dremio-rest-server-operator:tag
+- `tables`: **Required**. Comma-separated list of tables to expose
+- `javaOptions`: *Optional*. Corresponds to *JAVA_TOOL_OPTIONS*: on JDK 9+, `--add-opens=java.base/java.nio=ALL-UNNAMED` is required
+- `containerLimits`: *Optional*. K8S resource configuration, limits resources a container can have.
+  - `cpu`: *Optional*, string.
+  - `memory`: *Optional*, string.
+- `containerRequests`: *Optional*. K8S resource configuration, the minimum a container is guaranteed to have.
+  - `cpu`: *Optional*, string.
+  - `memory`: *Optional*, string.
+- `connection`:
+  - `host`: **Required**.
+  - `port`: *Optional*.
+  - `user`: Used with `password` to authenticate on Dremio. Do not provide if `secretName` is provided.
+  - `password`: Used with `user` to authenticate on Dremio. Do not provide if `secretName` is provided.
+  - `jdbcProperties`: *Optional*. String for extra connection parameters, in the format `parameter1=value&parameter2=value`.
+  - `secretName`: Name of a Kubernetes secret containing connection properties. Do not provide if `user` and `password` are provided. More information in a later section.
+ 
+Note that you must provide either `secretName`, or `user` and `password`, but if you provide the former, do not provide the latter two, and vice versa.
+
+A valid sample spec configuration is:
+``` yaml
+...
+spec:
+  javaOptions: --add-opens=java.base/java.nio=ALL-UNNAMED
+  tables: postgres.myschema.mytable
+  connection:
+    host: 192.168.123.123
+    user: dremio
+    password: dremio123
+    containerLimits:
+      cpu: 1000m
+      memory: 512Mi
+    containerRequests:
+      cpu: 200m
+      memory: 128Mi
 ```
 
-### Uninstall CRDs
-To delete the CRDs from the cluster:
-
-```sh
-make uninstall
+Another valid sample:
+``` yaml
+...
+spec:
+  javaOptions: --add-opens=java.base/java.nio=ALL-UNNAMED
+  tables: postgres.myschema.mytable
+  connection:
+    host: 192.168.123.123
+    port: 32010
+    jdbcProperties: useEncryption=false&disableCertificateVerification=true
+    secretName: mysecret
 ```
 
-### Undeploy controller
-UnDeploy the controller from the cluster:
+## Using a K8S secret to authenticate
 
-```sh
-make undeploy
+Instead of writing user and password as properties, you can provide a `connection.secretName` property, containing a string with the name of a Kubernetes secret to use to authenticate.
+
+Here is a sample file you can apply with `kubectl apply -f secret-file.yml` to create the secret:
+``` yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: mysecret
+  namespace: dremio-rest-server-operator-system
+stringData:
+  USER: dremio
+  PASSWORD: dremio123
 ```
-
-## Contributing
-// TODO(user): Add detailed information on how you would like others to contribute to this project
-
-### How it works
-This project aims to follow the Kubernetes [Operator pattern](https://kubernetes.io/docs/concepts/extend-kubernetes/operator/).
-
-It uses [Controllers](https://kubernetes.io/docs/concepts/architecture/controller/),
-which provide a reconcile function responsible for synchronizing resources until the desired state is reached on the cluster.
-
-### Test It Out
-1. Install the CRDs into the cluster:
-
-```sh
-make install
-```
-
-2. Run your controller (this will run in the foreground, so switch to a new terminal if you want to leave it running):
-
-```sh
-make run
-```
-
-**NOTE:** You can also run this in one step by running: `make install run`
-
-### Modifying the API definitions
-If you are editing the API definitions, generate the manifests such as CRs or CRDs using:
-
-```sh
-make manifests
-```
-
-**NOTE:** Run `make --help` for more information on all potential `make` targets
-
-More information can be found via the [Kubebuilder Documentation](https://book.kubebuilder.io/introduction.html)
-
-## License
-
-Copyright 2023.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-
